--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
-Flask-Mail==0.9.1
+Flask-Mail==0.10.0
+Flask-Login==0.7.0
 Werkzeug==3.0.1
+gunicorn==21.2.0
 python-dotenv==1.0.0
-Pillow==10.1.0
-
+Pillow==11.0.0
