--- a/render.yaml
+++ b/render.yaml
@@ -4,12 +4,16 @@ services:
     runtime: python3
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
+    disk:
+      name: sqlite-data
+      mountPath: /data
+      sizeGB: 1
     envVars:
       - key: FLASK_ENV
         value: production
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
-        value: sqlite:////opt/render/project/src/instance/nirvana_buddha.db
+        value: sqlite:////data/nirvana_buddha.db
       - key: PYTHONPATH
         value: /opt/render/project/src
