--- a/render.yaml
+++ b/render.yaml
@@ -2,18 +2,14 @@ services:
   - type: web
     name: nirvana-buddha-meditation
     runtime: python3
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt && python init_db.py
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
-    disk:
-      name: sqlite-data
-      mountPath: /data
-      sizeGB: 1
     envVars:
       - key: FLASK_ENV
         value: production
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
-        value: sqlite:////data/nirvana_buddha.db
+        value: sqlite:////tmp/nirvana_buddha.db
       - key: PYTHONPATH
         value: /opt/render/project/src
