--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: nirvana-buddha-meditation
     runtime: python3
-    buildCommand: pip install -r requirements.txt && python init_db.py
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
       - key: FLASK_ENV
@@ -10,6 +10,6 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
-        value: sqlite:////tmp/nirvana_buddha.db
+        value: sqlite:////var/tmp/nirvana_buddha.db
       - key: PYTHONPATH
         value: /opt/render/project/src
