--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 FLASK_ENV=development
 SECRET_KEY=dev-secret-key-change-in-production
 
-# Database Configuration
-DATABASE_URL=sqlite:///instance/nirvana_buddha.db
+# Database Configuration (Local folder to avoid OneDrive sync issues)
+DATABASE_URL=sqlite:///C:/Users/91971/AppData/Local/NirvanaApp/nirvana_buddha.db
 
 # Email Configuration (Optional - for form confirmations)
 MAIL_SERVER=smtp.gmail.com
